--- a/my-react-app/src/Lemon.css
+++ b/my-react-app/src/Lemon.css
@@ -1,6 +1,4 @@
-import './components/ProductCard.css';
-
-.product-card {
+.oil-card {
   background-color: #8F9779; /* Earthy green */
   color: #A67B5B; /* Earthy brown */
   padding: 20px;
@@ -9,14 +7,9 @@ import './components/ProductCard.css';
   width: 200px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
 }
 
-.product-card:hover {
-  transform: scale(1.05);
-}
-
-.product-image {
+.oil-image {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
@@ -24,29 +17,29 @@ import './components/ProductCard.css';
   border: 2px solid #2E4A2C; /* Earthy green */
 }
 
-.product-card h2 {
+.oil-card h2 {
   font-size: 1.5em;
   color: #2E4A2C; /* Earthy green */
 }
 
-.product-card p {
+.oil-card p {
   font-size: 1em;
   color: #2E4A2C; /* Earthy green */
 }
 
-.product-card h3 {
+.oil-card h3 {
   font-size: 1.2em;
   margin-top: 10px;
   color: #2E4A2C; /* Earthy green */
 }
 
-.product-card ul {
+.oil-card ul {
   list-style: none;
   padding: 0;
   margin-top: 10px;
 }
 
-.product-card li {
+.oil-card li {
   font-size: 0.9em;
   color: #A67B5B; /* Earthy brown */
 }
