--- a/my-react-app/src/Styles/OilList.css
+++ b/my-react-app/src/Styles/OilList.css
@@ -14,7 +14,7 @@
 .oil-item {
   background-color: #8F9779;         /* Earthy green background */
   color: black;                      /* Earthy brown text */
-  padding: 20px;                     /* Padding inside the item */
+  padding: 20px;                     /* Space inside the item */
   border-radius: 10px;               /* Rounded corners */
   text-align: center;                /* Center text alignment */
   width: 200px;                      /* Fixed width for consistency */
@@ -31,7 +31,7 @@
 /* Styling for oil images */
 .oil-image {
   max-width: 100%;                   /* Ensure image fits within item */
-  height: 170px;                     /* Fixed height for images */
+  height: auto;                      /* Auto height to maintain aspect ratio */
   border-radius: 8px;                /* Rounded corners */
   margin-bottom: 10px;               /* Space below the image */
   border: 2px solid #2E4A2C;         /* Earthy green border */
