--- a/my-react-app/src/Styles/Hero.css
+++ b/my-react-app/src/Styles/Hero.css
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     height: 100vh;
-    background-image: url('./images/essential-oils.jpg'); /* Add your own image */
+    background-image: url('./images/OilImage.jpg'); /* Add your own image */
     background-size: cover;
     background-attachment: fixed; /* Parallax effect */
     background-position: center;
